# asr

./: .dockerignore  .dvcignore  .env.example  .flake8  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.local  Dockerfile.simple  Makefile  README.md  README_MAC_TESTING.md  accelerate_config_mac.yaml  build-and-push.sh  convert_checkpoint.py  demo.py  demo_pipeline.py  demo_simple.py  deploy-to-runpod.sh  docker-compose.yml  eval_checkpoint.py  eval_model.sh  experiment_config.json  install-deps.sh  install_dependencies.sh  pod-copy.sh  pyproject.toml  requirements.txt  runpod_quickstart.md  runpod_setup.sh  test_config.json  test_data_loading.py  test_eval_subset.py  test_grad_clipping.py  test_mac.sh  test_mac_minimal.sh  test_mac_small.sh  test_streaming.py  test_train_minimal.py  test_training_batch.py  (+1 more)
.github/workflows/: deploy.yml
accelerate_configs/: a40_optimized.yaml  accelerate_config_mac.yaml  multi_gpu.yaml
configs/: mac_minimal.json  production.json  small_test.json  test_config.json
configs/accelerate/: a40_optimized.yaml
configs/experiments/: mac_debug.json  mac_minimal.json  overfit_aggressive.json  production.json  production_fast_eval.json  production_lowvram.json  production_nocompile.json  test_config.json  test_config_compiled.json
configs/hydra/: config.yaml
configs/hydra/experiments/: combined_datasets.yaml  debug_training.yaml  mac_minimal.yaml  production.yaml  production_eval.yaml  streaming_example.yaml  test.yaml
configs/hydra/model/: default.yaml  large.yaml  medium.yaml  small.yaml
configs/hydra/training/: default.yaml  mac.yaml  production.yaml
docs/: DEPLOYMENT.md  HYDRA_MIGRATION.md
scripts/: attach_remote_session.py  config.json  custom_config.json  deploy.sh  deploy_runpod.py  deploy_vast.py  eval_latest.sh  eval_remote.py  handler.py  install-deps.sh  install_dependencies.sh  model_config.json  pod_copy.sh  pod_deploy.sh  push_remote_to_hub.py  push_to_hub.py  runpod_deploy.py  setup_hf_token.sh  start_remote_training.py  train_server.sh
src/: eval.py  modeling.py  train.py  train_hydra.py  train_legacy.py
