[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asr-conformer-smollm2"
dynamic = ["version"]
description = "Automatic Speech Recognition training pipeline combining Conformer encoder with SmolLM2 decoder"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Alex Kroman", email = "alex@alexkroman.com"}
]
keywords = ["speech-recognition", "asr", "conformer", "smollm2", "transformers", "deep-learning"]
classifiers = [
    "Intended Audience :: Developers",
]

dependencies = [
    # Core ML frameworks
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.35.0",
    "accelerate>=0.24.0",
    "datasets>=2.14.0",

    # Model components
    "einops>=0.7.0",
    "peft>=0.6.0",

    # Evaluation and metrics
    "evaluate>=0.4.0",
    "jiwer>=3.0.0",

    # Audio processing
    "soundfile>=0.12.0",
    "librosa>=0.10.0",

    # Training utilities
    "tensorboard>=2.14.0",

    # HuggingFace ecosystem
    "huggingface-hub>=0.16.0",
    "safetensors>=0.3.0",
    "tokenizers>=0.14.0",
    "sentencepiece>=0.1.99",

    # Data processing
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pyarrow>=12.0.0",

    # General utilities
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "requests>=2.31.0",
    "psutil>=5.9.0",
    "packaging>=23.0",
    "python-dotenv>=1.0.0",

    # Configuration management
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",

    # Interface (optional)
    "gradio>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
    # Type stubs
    "types-PyYAML>=6.0.0",
    "types-requests>=2.31.0",
    "types-tqdm>=4.65.0",
    "types-setuptools>=68.0.0",
]

optimized = [
    "optimum>=1.13.0",
    "hf-transfer>=0.1.0",
]

cuda = [
    "nvidia-ml-py>=12.535.0",
    "triton>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/asr-conformer-smollm2"
Documentation = "https://github.com/yourusername/asr-conformer-smollm2#readme"
Repository = "https://github.com/yourusername/asr-conformer-smollm2"
Issues = "https://github.com/yourusername/asr-conformer-smollm2/issues"

[tool.hatch.version]
path = "src/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/configs",
    "/scripts",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

# Hatch environments
[tool.hatch.envs.default]
dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[tool.hatch.envs.default.scripts]
# Training scripts
train = "python src/train.py {args:}"
train-mac = "python src/train.py +experiments=mac_minimal"

# Development tools
lint = [
    "ruff check src",
    "mypy src",
]
format = [
    "ruff format src",
    "black src",
]

# Docker commands
docker-build = "docker build --platform=linux/amd64 -f Dockerfile -t asr-training:latest ."
docker-build-local = "docker build -f Dockerfile.local -t asr-training:local ."
docker-push = "bash -c 'docker tag asr-training:latest ${DOCKER_REGISTRY}/asr-training:latest && docker push ${DOCKER_REGISTRY}/asr-training:latest'"
deploy-docker-local = "docker compose --profile dev up train-dev"

[tool.hatch.envs.cuda]
template = "default"
features = ["cuda", "optimized"]

[tool.hatch.envs.cuda.env-vars]
HF_HOME = "/workspace/.cache/huggingface"
HF_DATASETS_CACHE = "/workspace/datasets"
TORCH_HOME = "/workspace/.cache/torch"
HF_HUB_ENABLE_HF_TRANSFER = "1"
HF_DATASETS_DOWNLOAD_WORKERS = "32"
HF_DATASETS_IN_MEMORY_MAX_SIZE = "0"

[tool.hatch.envs.cuda.scripts]
train-prod = "OMP_NUM_THREADS=9 accelerate launch --config_file configs/accelerate/a40.yaml src/train.py +experiments=production"
eval-prod = "python src/train.py +experiments=production eval_checkpoint={args:./outputs/production_model/checkpoint-1000}"

[tool.hatch.envs.mac]
template = "default"

[tool.hatch.envs.mac.env-vars]
PYTORCH_ENABLE_MPS_FALLBACK = "1"
PYTORCH_MPS_HIGH_WATERMARK_RATIO = "0.0"
TOKENIZERS_PARALLELISM = "false"
MPS_ALLOCATOR_POLICY = "default"

# Code quality tools configuration
[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py38"
extend-exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
    "*.egg-info",
    ".mypy_cache",
    ".pytest_cache",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "T10", # flake8-debugger
    "ISC", # flake8-implicit-str-concat
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "PTH", # flake8-use-pathlib
]
extend-ignore = [
    "E203",  # whitespace before ':'
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "B905",  # zip() without an explicit strict= parameter
]